// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout.styles Container DEVE ser igual ao snapshot QUANDO $backgroundblack for igual a false 1`] = `
.c0 {
  text-align: center;
  min-height: 100vh;
  background-color: #23242a;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Layout.styles Container DEVE ser igual ao snapshot QUANDO $backgroundblack for igual a true 1`] = `
.c0 {
  text-align: center;
  min-height: 100vh;
  background-color: #F7F5F2;
}

<div>
  <div
    class="c0"
  />
</div>
`;
